fixed overbleed on mobile screen through padding seeting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -584,6 +584,12 @@ footer {
     padding-top: 40px;
 }
 
+.intro-loud {
+    display: block;
+    font-size: 25px;
+    
+}
+
   }
 
    @media all and (max-width: 960px) and (min-width: 721px) {
